some lint fix